<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/pref_movie_sort_key"
        android:defaultValue="@string/pref_movie_sort_default"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_movie_sort_message" />

    <CheckBoxPreference
        android:key="@string/prefs_notification_key"
        android:defaultValue="true"
        android:summaryOff="@string/prefs_notification_summary_off"
        android:summaryOn="@string/prefs_notification_summary_on"
        android:title="@string/prefs_notification_title"
        />

</PreferenceScreen>
